# ai-dreaming-center

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
docs/: README.md  architecture.md  smoke-tests.md
docs/en/: README.md  api.md  architecture.md  configuration.md  deployment.md  development.md  routes.md  schema.md  services.md  troubleshooting.md  waves.md
docs/features/: analytics.md  self-study.md
docs/ru/: README.md  api.md  configuration.md  deployment.md  development.md  routes.md  schema.md  services.md  troubleshooting.md  waves.md
docs/user/: faq.md
dreaming/: __init__.py  config.py  main.py
dreaming/i18n/: messages_en.json  messages_ru.json
dreaming/lib/: flash.py
dreaming/middleware/: project_resolver.py  setup_gate.py
dreaming/routes/: ai_radar.py  api.py  project_ai_radar.py  project_ai_usage.py  project_bulk.py  project_cascade_costs.py  project_contracts.py  project_dashboard.py  project_evolutions.py  project_findings.py  project_help.py  project_ideas.py  (+22 more)
scripts/: check_i18n.py  check_no_native_dialogs.py  install_starter_kit.py  seed_ai_radar.py  smoke_ai_radar.py  smoke_dashboard_tiles.py  smoke_db_methods.py  smoke_evolution_rubric.py  smoke_i18n.py  smoke_last_scan.py  smoke_loop_templates.py  smoke_orchestration_stream.py  smoke_pipelines.py  smoke_pm_api.py  smoke_resolver.py  smoke_resume_prompt.py  smoke_review.py  smoke_scan.py  smoke_seed_one.py  smoke_session.py  smoke_setup.py  smoke_skill_agent_stats.py  smoke_spawn_flags.py  smoke_table_tools.py  smoke_tech_debt_view.py  smoke_topics_generation.py
(+199 files in other folders)
