[project]
name = "ai-dreaming-center"
version = "0.1.0"
description = "Multi-project orchestration dashboard for Claude CLI agent teams"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "aiosqlite>=0.20",
    "sse-starlette>=2.2",
    "apscheduler>=3.10",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",
    "tzlocal>=5.0",
    "markdown>=3.6",
    "psutil>=5.9",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dreaming*"]
